--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -618,3 +618,8 @@ table.interlinear.rtl {
   color: #fff!important;
   background-color: #53808c
 }
+
+.divider {
+  width: 100%;
+  height: 8px;
+}
