--- a/css/stylesheet-coloured-tabs.css
+++ b/css/stylesheet-coloured-tabs.css
@@ -326,10 +326,63 @@ textarea {
 }
 .clearfix {
   clear: both;
+  display: none;
 }
+
+#topbar {
+  width: 100%;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 #topbar a {
   color: inherit;
 }
+
+#topbar span {
+  padding: .3rem 1rem;
+  box-shadow: 1px 1px 5px #555;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#topbar > span:first-child {
+  background-color: wheat;
+}
+
+#topbar > span:nth-child(2) {
+  background-color: thistle;
+}
+
+#topbar > span:nth-child(3) {
+  background-color: coral;
+}
+
+#topbar > span:nth-child(4) {
+  background-color: tomato;
+}
+
+#topbar > span:nth-child(5) {
+  background-color: darkseagreen;
+}
+
+#topbar > span:nth-child(6) {
+  background-color:rgb(74, 122, 122);
+}
+
+#topbar.wrap-active {
+  flex-wrap: wrap;
+}
+
+#breadcrumbs {
+  display: none;
+}
+
 #breadcrumbs:not(:empty) {
   margin: 0.2em 0;
   padding: 0.2em 0;
