Updated the left out divider updates from master

--- a/css/stylesheet-id.css
+++ b/css/stylesheet-id.css
@@ -587,6 +587,56 @@ table.interlinear.rtl {
   cursor: default;
 }
 
+.white-on-green {
+  color: #fff!important;
+  background-color: #008080;
+}
+
+.black-on-orange {
+  color: #0a0a0a!important;
+  background-color: #ffa500;
+}
+
+.black-on-neon-green {
+  color: #0a0a0a!important;
+  background-color: #00ff00;
+}
+
+.white-on-purple {
+  color: #fff!important;
+  background-color: #0000ff;
+}
+
+.white-on-pink {
+  color: #fff!important;
+  background-color: #ff1493;
+}
+
+.black-on-yellow {
+  color: #0a0a0a!important;
+  background-color: #ffff54
+}
+
+.black-on-light-blue {
+  color: #0a0a0a!important;
+  background-color: #7ba6d7
+}
+
+.white-on-dark-blue {
+  color: #fff!important;
+  background-color: #2654c5
+}
+
+.white-on-turkish-blue {
+  color: #fff!important;
+  background-color: #53808c
+}
+
+.divider {
+  width: 100%;
+  height: 8px;
+}
+
 @media print {
   body,
   #workspacewrapper,
