Darkened the colors of bible book picker tabs. Added a few verification questions and improved the randomization of the questions.

--- a/css/stylesheet-id.css
+++ b/css/stylesheet-id.css
@@ -234,17 +234,17 @@ div[contenteditable=true],
     }
 
     #applybook .selector.ap a {
-      background-color: #1116 !important;
+      background-color: #3d3d3d !important;
       color: #fff !important;
     }
 
     #applybook .selector.ot a {
-      background-color: #b81a1a !important;
+      background-color: #820d0d !important;
       color: #fff !important;
     }
   
     #applybook .selector.nt a {
-      background-color: #1a24ad !important;
+      background-color: #0f0d82 !important;
       color: #fff !important;
     }
 
